--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             <ul class="links-container">
                 <li class="link-items"><a href="#hero-section" class="links">Home</a></li>
                 <li class="link-items"><a href="#service-section" class="links">Services</a></li>
-                <li class="link-items"><a href="#about-section" class="links">About us</a></li>
-                <li class="link-items"><a href="#contact-section" class="links">Contact Us</a></li>
+                <li class="link-items"><a href="#about-section" class="links">About</a></li>
+                <li class="link-items"><a href="#contact-section" class="links">Contact</a></li>
             </ul>
 
             <!-- nav toggle btn -->
