--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="hero-info">
 
                 <h1 class="hero-heading">Software Engineer <span>&</span> Tech Consultant</h1>
-                <p class="hero-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus efficitur ligula lacinia, elementum nunc nec, commodo arcu. Morbi congue, magna ut</p>
+                <p class="hero-paragraph">I'm a full-stack software, data, and cloud engineer (React, Java, SQL, NodeJS, AWS, Azure, and Google Cloud) and a consultant with over ten (10) years of experience.</p>
 
                 <!-- action buttons -->
                 <div class="hero-action-buttons">
