--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <!-- nav links -->
             <ul class="links-container">
                 <li class="link-items"><a href="#hero-section" class="links">Home</a></li>
-                <li class="link-items"><a href="#service-section" class="links">Services</a></li>
+                <li class="link-items"><a href="#service-section" class="links">My Services</a></li>
                 <li class="link-items"><a href="#about-section" class="links">About</a></li>
                 <li class="link-items"><a href="#contact-section" class="links">Contact</a></li>
             </ul>
@@ -56,7 +56,7 @@
                 <!-- action buttons -->
                 <div class="hero-action-buttons">
                     <a href="#" class="btn primary-btn">contact us</a>
-                    <a href="#" class="btn secondary-btn">Discover</a>
+                    <a href="https://github.com/romanerobb" class="btn secondary-btn"><i class="fa-brands fa-github"></i></i> Github</a>
                 </div>
 
             </div>
@@ -68,7 +68,7 @@
 
                 <img src="img/header.png" data-aos="zoom-out" class="hero-img" alt="">
 
-                <a href="#" class="hero-img-social-link" data-aos="zoom-out" data-aos-delay="450">
+                <a href="https://www.youtube.com/@romanerobb" class="hero-img-social-link" data-aos="zoom-out" data-aos-delay="450">
                     <img src="img/youtube.png" alt="">
                 </a>
 
@@ -79,7 +79,8 @@
                 
                 <div class="hero-review" data-aos="zoom-out" data-aos-delay="600">
                     <i class="fa-solid fa-quote-left"></i>
-                    <p>When I started my channel, I didn’t knew how I can make it successful. These guys just helped me make my dream come true.</p>
+                    <p>My level of experience and very diverse knowledge base is unparralel. And in an industry with constant change, this is exactly what you need.</p>
+                    <i class="fa-solid fa-quote-right"></i>
                 </div>
 
             </div>
@@ -91,7 +92,7 @@
     <!-- brand sections -->
 
     <section class="brands-section">
-        <p class="section-secondary-line">Worked with 20+ leading brands</p>
+        <p class="section-secondary-line">Some of the amazing companies I've work with.</p>
 
         <div class="brands-container">
             <div class="brand"><img src="img/microsoft.png" class="brand-img" alt=""></div>
@@ -324,7 +325,7 @@
         <!-- contact us form -->
 
         <div class="contact-us">
-            <h3 class="section-title">Contact us. So that we can provide the best strategy.</h3>
+            <h3 class="section-title">Drop me an email. I'm a very prompt communicator.</h3>
 
             <form class="contact-form">
                 <input type="text" required placeholder="Name" name="name">
@@ -374,7 +375,7 @@
             <p class="footer-text">Email - help@logo.com</p>
         </div>
 
-        <p class="copyright">Designed & 👨‍💻 by Modern Web</p>
+        <p class="copyright">Designed by Romane Orlando Robb</p>
 
     </footer>
 
