--- a/index.html
+++ b/index.html
@@ -125,14 +125,14 @@
 
         <!-- about us -->
         <div class="about-us">
-            <p class="section-secondary-line">Target the right audience and</p>
-            <h3 class="section-title">Grow your business with us</h3>
+            <p class="section-secondary-line">Who is Romane Orlando Robb?</p>
+            <h3 class="section-title">Well, here's a little bit about me...</h3>
 
             <div class="benefit-card">
                 <div class="card-img">
                     <img src="img/grow.png" alt="">
                 </div>
-                <p class="card-name">Get more traffic</p>
+                <p class="card-name">I've created over ten (10) companies.</p>
             </div>
 
             <div class="benefit-card">
@@ -165,8 +165,8 @@
 
         <div class="circle right"></div>
 
-        <h3 class="section-title">We offer a wide variety of services</h3>
-        <p class="section-secondary-line">to fit your need</p>
+        <h3 class="section-title">I offer a wide variety of services</h3>
+        <p class="section-secondary-line">to fit your specific needs</p>
 
         <!-- services card -->
         <div class="services-container">
@@ -240,7 +240,7 @@
     <!-- faqs -->
 
     <section id="faq-section">
-        <p class="section-secondary-line">Still have any question</p>
+        <p class="section-secondary-line">Still have any questions</p>
         <h3 class="section-title">Frequently asked questions</h3>
 
         <!-- faq -->
