--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Digital Marketing Landing Page</title>
+    <title>Romane Orlando Robb - Software Engineer and Tech Consultant</title>
 
     <!-- Google Fonts CDN -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -92,7 +92,7 @@
     <!-- brand sections -->
 
     <section class="brands-section">
-        <p class="section-secondary-line">Some of the amazing companies I've work with.</p>
+        <p class="section-secondary-line">Some of the amazing companies I've been fortunate to work with.</p>
 
         <div class="brands-container">
             <div class="brand"><img src="img/microsoft.png" class="brand-img" alt=""></div>
@@ -139,21 +139,21 @@
                 <div class="card-img">
                     <img src="img/audience.png" alt="">
                 </div>
-                <p class="card-name">Connect with your audience</p>
+                <p class="card-name">Created TechnoFest. A technology and entertainment festival.</p>
             </div>
 
             <div class="benefit-card">
                 <div class="card-img">
                     <img src="img/sell.png" alt="">
                 </div>
-                <p class="card-name">Sell your product to right audience</p>
+                <p class="card-name">MBA in Corporate Innovation and Entreprenuership from Pennsylvania State University.</p>
             </div>
 
             <div class="benefit-card">
                 <div class="card-img">
                     <img src="img/relation.png" alt="">
                 </div>
-                <p class="card-name">Build a strong relation </p>
+                <p class="card-name">A film and TV producer. </p>
             </div>
         </div>
 
@@ -176,7 +176,7 @@
                     <div class="service-img">
                         <img src="img/market-planning.png" alt="">
                     </div>
-                    <p class="service-name">Market Planning</p>
+                    <p class="service-name">Web Development</p>
                 </div>
                 <p class="service-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus efficitur ligula lacinia, elementum nunc nec</p>
             </div>
@@ -246,7 +246,7 @@
         <!-- faq -->
         <div class="faq">
             <div class="question-box">
-                <h3 class="question">What is digital marketing ?</h3>
+                <h3 class="question">What is your primary tech stack ?</h3>
                 <i class="fa-solid fa-caret-up"></i>
             </div>
             <div class="answer-box">
@@ -256,7 +256,7 @@
 
         <div class="faq">
             <div class="question-box">
-                <h3 class="question">What are the benefits of digital marketing ?</h3>
+                <h3 class="question">Are you certified for the cloud ?</h3>
                 <i class="fa-solid fa-caret-up"></i>
             </div>
             <div class="answer-box">
@@ -286,7 +286,7 @@
 
         <div class="faq">
             <div class="question-box">
-                <h3 class="question">What is content marketing ?</h3>
+                <h3 class="question">What else do you do ?</h3>
                 <i class="fa-solid fa-caret-up"></i>
             </div>
             <div class="answer-box">
@@ -305,19 +305,19 @@
         <div class="contact-us-img-container">
             <img src="img/contact.png" data-aos="zoom-out" class="contact-us-img" alt="">
 
-            <a href="#" class="contact-img-social-link" data-aos="zoom-in-up" data-aos-delay="250">
+            <a href="https://www.instagram.com/robbromane/?hl=en" class="contact-img-social-link" data-aos="zoom-in-up" data-aos-delay="250">
                 <img src="img/instagram.png" alt="">
             </a>
 
-            <a href="#" class="contact-img-social-link" data-aos="zoom-in-up" data-aos-delay="300">
+            <a href="https://www.facebook.com/romanerobb/" class="contact-img-social-link" data-aos="zoom-in-up" data-aos-delay="300">
                 <img src="img/facebook.png" alt="">
             </a>
 
-            <a href="#" class="contact-img-social-link" data-aos="zoom-in-up" data-aos-delay="350">
+            <a href="https://twitter.com/romanerobbcom?lang=en" class="contact-img-social-link" data-aos="zoom-in-up" data-aos-delay="350">
                 <img src="img/twitter.png" alt="">
             </a>
 
-            <a href="#" class="contact-img-social-link" data-aos="zoom-in-up" data-aos-delay="400">
+            <a href="https://www.youtube.com/@romanerobb" class="contact-img-social-link" data-aos="zoom-in-up" data-aos-delay="400">
                 <img src="img/youtube.png" alt="">
             </a>
         </div>
@@ -331,9 +331,8 @@
                 <input type="text" required placeholder="Name" name="name">
                 <input type="email" required placeholder="Email" name="email">
                 <input type="text" required placeholder="Your business goal" name="goal">
-                <textarea name="body" placeholder="Tell us more about your business.." required></textarea>
-
-                <button type="submit" class="btn primary-btn">contact us</button>
+                <textarea name="body" placeholder="Tell me more about your business.." required></textarea>
+                <button type="submit" class="btn primary-btn">contact me</button>
             </form>
         </div>
 
@@ -369,10 +368,10 @@
         </div>
 
         <div class="contact footer-links-container">
-            <h5 class="footer-links-title">Contact Us</h5>
-            <p class="footer-text">We are a Italian company based in italy.</p>
-            <p class="footer-text">Phone - +00 1234567890</p>
-            <p class="footer-text">Email - help@logo.com</p>
+            <h5 class="footer-links-title">Contact Me</h5>
+            <p class="footer-text">Phone #1 - +1 9293748374</p>
+            <p class="footer-text">Phone #2 - +1 3152773691</p>
+            <p class="footer-text">Email - biz@rorobb.com</p>
         </div>
 
         <p class="copyright">Designed by Romane Orlando Robb</p>
