--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="hero-info">
 
                 <h1 class="hero-heading">Software Engineer <span>&</span> Tech Consultant</h1>
-                <p class="hero-paragraph">I'm a full-stack software, data, and cloud engineer (React, Java, SQL, NodeJS, AWS, Azure, and Google Cloud) and a consultant with over ten (10) years of experience.</p>
+                <p class="hero-paragraph">I'm a full-stack software, data, and cloud engineer (React - HTML, CSS, and JavScript, Java, SQL, NodeJS, Amazon Web Services (AWS), Microsoft Azure, and Google Cloud) and a consultant (management, technology, and strategy) with over ten (10) years of experience.</p>
 
                 <!-- action buttons -->
                 <div class="hero-action-buttons">
@@ -176,9 +176,9 @@
                     <div class="service-img">
                         <img src="img/market-planning.png" alt="">
                     </div>
-                    <p class="service-name">Web Development</p>
+                    <p class="service-name">Application Development</p>
                 </div>
-                <p class="service-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus efficitur ligula lacinia, elementum nunc nec</p>
+                <p class="service-info">As a full-stack engineer and developer I have created and worked on over one hundred (100) projects</p>
             </div>
 
             <div class="service-card">
@@ -186,9 +186,9 @@
                     <div class="service-img">
                         <img src="img/seo.png" alt="">
                     </div>
-                    <p class="service-name">SEO & Backlinking</p>
+                    <p class="service-name">Search Engine Optimization</p>
                 </div>
-                <p class="service-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus efficitur ligula lacinia, elementum nunc nec</p>
+                <p class="service-info">Your digital presence is crucial, especially in this day and age. From keyword efficency to analytics, I got you covered.</p>
             </div>
 
             <div class="service-card">
@@ -196,9 +196,9 @@
                     <div class="service-img">
                         <img src="img/social-marketing.png" alt="">
                     </div>
-                    <p class="service-name">Social media marketing</p>
+                    <p class="service-name">Marketing</p>
                 </div>
-                <p class="service-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus efficitur ligula lacinia, elementum nunc nec</p>
+                <p class="service-info">The name of the game is to create brand awareness. I have created many marketing campagins in a variety of industries.</p>
             </div>
 
             <div class="service-card">
@@ -206,9 +206,9 @@
                     <div class="service-img">
                         <img src="img/digital-marketing.png" alt="">
                     </div>
-                    <p class="service-name">Digital Marketing</p>
+                    <p class="service-name">Cloud Architecture</p>
                 </div>
-                <p class="service-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus efficitur ligula lacinia, elementum nunc nec</p>
+                <p class="service-info">I'm a certified developer for both Amazon Web Services (AWS) and Google Cloud.</p>
             </div>
 
             <div class="service-card">
@@ -216,9 +216,9 @@
                     <div class="service-img">
                         <img src="img/content-marketing.png" alt="">
                     </div>
-                    <p class="service-name">Content Marketing</p>
+                    <p class="service-name">Content Creation</p>
                 </div>
-                <p class="service-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus efficitur ligula lacinia, elementum nunc nec</p>
+                <p class="service-info">I have over fifteen (15) years of experience as a filmmaker, publisher, writer, and more. I'm the guy for the job.</p>
             </div>
 
             <div class="service-card">
@@ -226,9 +226,9 @@
                     <div class="service-img">
                         <img src="img/market-analysis.png" alt="">
                     </div>
-                    <p class="service-name">Market Analysis</p>
+                    <p class="service-name">Data and Market Analysis</p>
                 </div>
-                <p class="service-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus efficitur ligula lacinia, elementum nunc nec</p>
+                <p class="service-info">As a data engineer (Hadoop, Tableu, SQL, and Snowflake), I have worked with an array of data sets and delivered for many clients.</p>
             </div>
 
         </div>
@@ -348,15 +348,16 @@
                 <a href="#"><img src="img/instagram.png" alt=""></a>
                 <a href="#"><img src="img/facebook.png" alt=""></a>
                 <a href="#"><img src="img/twitter.png" alt=""></a>
-                <a href="#"><img src="img/youtube.png" alt=""></a>
+                <a href="https://www.youtube.com/@romanerobb"><img src="img/youtube.png" alt=""></a>
             </div>
         </div>
 
         <div class="useful-links footer-links-container">
             <h5 class="footer-links-title">Useful Links</h5>
-            <a href="#" class="footer-links">Home</a>
-            <a href="#" class="footer-links">Services</a>
-            <a href="#" class="footer-links">Testimonials</a>
+            <a href="#hero-section" class="footer-links">Home</a>
+            <a href="#service-section" class="footer-links">Services</a>
+            <a href="#about-section" class="footer-links">About</a>
+            <a href="#contact-section" class="footer-links">Contact</a>
         </div>
 
         <div class="information footer-links-container">
@@ -364,14 +365,15 @@
             <a href="#" class="footer-links">About Us</a>
             <a href="#" class="footer-links">Privacy Policy</a>
             <a href="#" class="footer-links">Terms & Conditions</a>
-            <a href="#" class="footer-links">What info we collect ?</a>
+            <a href="#" class="footer-links">What info do I collect ?</a>
         </div>
 
         <div class="contact footer-links-container">
             <h5 class="footer-links-title">Contact Me</h5>
-            <p class="footer-text">Phone #1 - +1 9293748374</p>
-            <p class="footer-text">Phone #2 - +1 3152773691</p>
-            <p class="footer-text">Email - biz@rorobb.com</p>
+            <a href="#" class="footer-links">Phone #1: +1 9293748123</a>
+            <a href="#" class="footer-links">Phone #2:  +1 3152773691</a>
+            <a href="#" class="footer-links">Email: biz@rorobb.com</a>
+            <a href="#" class="footer-links">Email #2: hello@rorobb.com</a>
         </div>
 
         <p class="copyright">Designed by Romane Orlando Robb</p>
