--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Romane Orlando Robb - Software Engineer and Tech Consultant</title>
+    <link rel="icon" type="image/x-icon" href="img\favicon_io\favicon.ico">
+
 
     <!-- Google Fonts CDN -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
