--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 
                 <!-- action buttons -->
                 <div class="hero-action-buttons">
-                    <a href="#" class="btn primary-btn">contact us</a>
-                    <a href="https://github.com/romanerobb" class="btn secondary-btn"><i class="fa-brands fa-github"></i></i> Github</a>
+                    <a href="https://medium.rorobb.com/" class="btn primary-btn"><i class="fa-regular fa-newspaper"></i></i> Articles</a>
+                    <a href="https://github.com/romanerobb" class="btn primary-btn"><i class="fa-brands fa-github"></i></i> Github</a>
                 </div>
 
             </div>
