--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             <!-- nav links -->
             <ul class="links-container">
                 <li class="link-items"><a href="#hero-section" class="links">Home</a></li>
-                <li class="link-items"><a href="#service-section" class="links">My Services</a></li>
                 <li class="link-items"><a href="#about-section" class="links">About</a></li>
+                <li class="link-items"><a href="#service-section" class="links">Services</a></li>
                 <li class="link-items"><a href="#contact-section" class="links">Contact</a></li>
             </ul>
 
