--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
                 <img src="img/about.png" data-aos="zoom-out" data-aos-delay="250" alt="">
             </div>
 
-            <a href="#" class="about-img-social-link" data-aos="zoom-in-up" data-aos-delay="250"><img src="img/instagram.png" alt=""></a>
-            <a href="#" class="about-img-social-link" data-aos="zoom-in-up" data-aos-delay="300"><img src="img/facebook.png" alt=""></a>
-            <a href="#" class="about-img-social-link" data-aos="zoom-in-up" data-aos-delay="350"><img src="img/twitter.png" alt=""></a>
-            <a href="#" class="about-img-social-link" data-aos="zoom-in-up" data-aos-delay="400"><img src="img/youtube.png" alt=""></a>
+            <a href="https://www.instagram.com/robbromane/?hl=en" class="about-img-social-link" data-aos="zoom-in-up" data-aos-delay="250"><img src="img/instagram.png" alt=""></a>
+            <a href="https://www.facebook.com/romanerobb/" class="about-img-social-link" data-aos="zoom-in-up" data-aos-delay="300"><img src="img/facebook.png" alt=""></a>
+            <a href="https://twitter.com/romanerobbcom?lang=en" class="about-img-social-link" data-aos="zoom-in-up" data-aos-delay="350"><img src="img/twitter.png" alt=""></a>
+            <a href="https://www.youtube.com/@romanerobb" class="about-img-social-link" data-aos="zoom-in-up" data-aos-delay="400"><img src="img/youtube.png" alt=""></a>
 
         </div>
 
@@ -155,7 +155,7 @@
                 <div class="card-img">
                     <img src="img/relation.png" alt="">
                 </div>
-                <p class="card-name">A film and TV producer. </p>
+                <p class="card-name">A film and TV producer with over twenty (20) credits. </p>
             </div>
         </div>
 
@@ -242,8 +242,8 @@
     <!-- faqs -->
 
     <section id="faq-section">
-        <p class="section-secondary-line">Still have any questions</p>
-        <h3 class="section-title">Frequently asked questions</h3>
+        <p class="section-secondary-line">Still Have Questions?</p>
+        <h3 class="section-title">Frequently Asked Questions</h3>
 
         <!-- faq -->
         <div class="faq">
@@ -252,37 +252,37 @@
                 <i class="fa-solid fa-caret-up"></i>
             </div>
             <div class="answer-box">
-                <p class="answer">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe repudiandae architecto quos, alias fugiat fugit esse qui culpa animi consectetur!</p>
+                <p class="answer">React, Java, TypeScript, NodeJS, SQL, and AWS.</p>
             </div>
         </div>
 
         <div class="faq">
             <div class="question-box">
-                <h3 class="question">Are you certified for the cloud ?</h3>
+                <h3 class="question">Why should I work with you?</h3>
                 <i class="fa-solid fa-caret-up"></i>
             </div>
             <div class="answer-box">
-                <p class="answer">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe repudiandae architecto quos, alias fugiat fugit esse qui culpa animi consectetur!</p>
+                <p class="answer">We live in an era where everyone claims expertise with little to no experience. You can verify my track record. You can see the metrics attributed to my success and the success of my client. Also, I'm a firm believer in real-world experience and I have many many years of that.</p>
             </div>
         </div>
 
         <div class="faq">
             <div class="question-box">
-                <h3 class="question">What are the different types of digital marketing ?</h3>
+                <h3 class="question">Which industries do you have significant experience in?</h3>
                 <i class="fa-solid fa-caret-up"></i>
             </div>
             <div class="answer-box">
-                <p class="answer">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe repudiandae architecto quos, alias fugiat fugit esse qui culpa animi consectetur!</p>
+                <p class="answer">Media (publishing, public relations, advertising, and analytics) and entertainment (film, TV, music, and events). Food and beverage. Fashion. Retail. Information technology. Cyber Security. Logistics. Private equity and venture capital. Branding. Construction. And government contracting.</p>
             </div>
         </div>
 
         <div class="faq">
             <div class="question-box">
-                <h3 class="question">What is SEO ?</h3>
+                <h3 class="question">How do you work with clients?</h3>
                 <i class="fa-solid fa-caret-up"></i>
             </div>
             <div class="answer-box">
-                <p class="answer">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe repudiandae architecto quos, alias fugiat fugit esse qui culpa animi consectetur!</p>
+                <p class="answer">Well, it completely depends on the client...so it varies. The only constant is that my role, which is that of a problem solver...and in that role finding the most beneficial ways to solve the particular client's problem.</p>
             </div>
         </div>
 
@@ -292,7 +292,7 @@
                 <i class="fa-solid fa-caret-up"></i>
             </div>
             <div class="answer-box">
-                <p class="answer">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe repudiandae architecto quos, alias fugiat fugit esse qui culpa animi consectetur!</p>
+                <p class="answer">Raise my amazing daughters with the gracious support from my equally amazing wife followed by...filmmaking, fashion design, government contracting, learning new technologies, writing articles, creating new ventures, investing, photography, and the list goes on.</p>
             </div>
         </div>
 
