--- a/index.html
+++ b/index.html
@@ -347,9 +347,9 @@
             <img src="img/logo.png" class="logo" alt="">
 
             <div class="social-links">
-                <a href="#"><img src="img/instagram.png" alt=""></a>
-                <a href="#"><img src="img/facebook.png" alt=""></a>
-                <a href="#"><img src="img/twitter.png" alt=""></a>
+                <a href="https://www.instagram.com/robbromane/?hl=en"><img src="img/instagram.png" alt=""></a>
+                <a href="https://www.facebook.com/romanerobb/"><img src="img/facebook.png" alt=""></a>
+                <a href="https://twitter.com/romanerobbcom?lang=en"><img src="img/twitter.png" alt=""></a>
                 <a href="https://www.youtube.com/@romanerobb"><img src="img/youtube.png" alt=""></a>
             </div>
         </div>
@@ -357,17 +357,17 @@
         <div class="useful-links footer-links-container">
             <h5 class="footer-links-title">Useful Links</h5>
             <a href="#hero-section" class="footer-links">Home</a>
-            <a href="#service-section" class="footer-links">Services</a>
             <a href="#about-section" class="footer-links">About</a>
+            <a href="#service-section" class="footer-links">Services</a>
             <a href="#contact-section" class="footer-links">Contact</a>
         </div>
 
         <div class="information footer-links-container">
             <h5 class="footer-links-title">Information</h5>
-            <a href="#" class="footer-links">About Us</a>
-            <a href="#" class="footer-links">Privacy Policy</a>
-            <a href="#" class="footer-links">Terms & Conditions</a>
-            <a href="#" class="footer-links">What info do I collect ?</a>
+            <a href="https://medium.rorobb.com/" class="footer-links">Articles</a>
+            <a href="https://rorobb.com/privacy-policy/" class="footer-links">Privacy Policy</a>
+            <a href="https://rorobb.com/terms-conditions/" class="footer-links">Terms & Conditions</a>
+            <a href="https://shop.theurbanblvd.com/collections/romane-robb" class="footer-links">Merch</a>
         </div>
 
         <div class="contact footer-links-container">
@@ -378,7 +378,7 @@
             <a href="#" class="footer-links">Email #2: hello@rorobb.com</a>
         </div>
 
-        <p class="copyright">Designed by Romane Orlando Robb</p>
+        <p class="copyright">Website designed by Romane Orlando Robb</p>
 
     </footer>
 
