--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
             <a href="#" class="footer-links">Email #2: hello@rorobb.com</a>
         </div>
 
-        <p class="copyright">Website designed by Romane Orlando Robb</p>
+        <p class="copyright">© Romane Robb, LLC. Website designed by Romane Orlando Robb</p>
 
     </footer>
 
