--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                     </div>
                     <p class="service-name">Application Development</p>
                 </div>
-                <p class="service-info">As a full-stack engineer and developer I have created and worked on over one hundred (100) projects</p>
+                <p class="service-info">As a full-stack engineer and developer I have created and worked on over one hundred (100) projects.</p>
             </div>
 
             <div class="service-card">
@@ -200,7 +200,7 @@
                     </div>
                     <p class="service-name">Marketing</p>
                 </div>
-                <p class="service-info">The name of the game is to create brand awareness. I have created many marketing campagins in a variety of industries.</p>
+                <p class="service-info">The name of the game is to create brand awareness. I have created many marketing campaigns in a variety of industries.</p>
             </div>
 
             <div class="service-card">
