--- a/index.html
+++ b/index.html
@@ -372,10 +372,10 @@
 
         <div class="contact footer-links-container">
             <h5 class="footer-links-title">Contact Me</h5>
-            <a href="#" class="footer-links">Phone #1: +1 9293748123</a>
-            <a href="#" class="footer-links">Phone #2:  +1 3152773691</a>
-            <a href="#" class="footer-links">Email: biz@rorobb.com</a>
-            <a href="#" class="footer-links">Email #2: hello@rorobb.com</a>
+            <a href="#" class="footer-links">Cell: +1 9293748123</a>
+            <a href="#" class="footer-links">Office:  +1 3152773691</a>
+            <a href="#" class="footer-links">Office Email: biz@rorobb.com</a>
+            <a href="#" class="footer-links">Personal Email: mail@romanerobb.com</a>
         </div>
 
         <p class="copyright">© Romane Robb, LLC. Website designed by Romane Orlando Robb</p>
