--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
                 </a>
 
                 <div class="subscribers" data-aos="zoom-out" data-aos-delay="300">
-                    <h1>1.50M+</h1>
-                    <p>Subscribers</p>
+                    <h1>250+</h1>
+                    <p>Clients</p>
                 </div>
                 
                 <div class="hero-review" data-aos="zoom-out" data-aos-delay="600">
