--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
             <div class="social-links">
                 <a href="https://www.instagram.com/robbromane/?hl=en"><img src="img/instagram.png" alt=""></a>
                 <a href="https://www.facebook.com/romanerobb/"><img src="img/facebook.png" alt=""></a>
-                <a href="https://twitter.com/romanerobbcom?lang=en"><img src="img/twitter.png" alt=""></a>
+                <a href="https://twitter.com/romanerobb?lang=en"><img src="img/twitter.png" alt=""></a>
                 <a href="https://www.youtube.com/@romanerobb"><img src="img/youtube.png" alt=""></a>
             </div>
         </div>
